--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="https://github.com/csuncodes/portfolio">
+									<a href="https://github.com/csuncodes/csuncodes.github.io">
 										<h2>Portfolio</h2>
 										<div class="content">
 											<p>Click here for the Github Repository for this site!</p>
