--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 									<a href="docfinder.html">
 										<h2>DocFinder</h2>
 										<div class="content">
-											<p>DocFinder is a search engine that finds you specific doctors who take your insurance through voice. Winner of the Conversation Interaction conference for best voice interface.</p>
+											<p>DocFinder is a search engine that finds you specific doctors who take your insurance through voice. Winner of the Conversation Interaction conference for best speech application.</p>
 										</div>
 									</a>
 								</article>
