--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
 								<ul class="icons">
 									<li><a href="https://twitter.com/codesforaday" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/profile.php?id=100008285211866" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
-								</ul>
+									<li><a href="https://github.com/csuncodes" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/claire-sun/" class="icon style2 fa fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
+
 							</section>
 							<ul class="copyright">
 								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
