made images responsive

--- a/arviewer.html
+++ b/arviewer.html
@@ -49,7 +49,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>AR Viewer</h1>
-							<img src="images/ar.png" alt="hgraph" class = "center" style="width:800px;height:400px;">
+							<img src="images/ar.png" alt="hgraph" class = "center" style=width:"800px" height:"400px">
 							<p>At Brandeis University, we have a large database of 3D models of biomolecules for use in lectures and research labs. I wanted to showcase this work of the University in an interactive way to the patrons of Makerfaire
 								at the school's exhibit.
     			To view a model, users simply click on the picture of the molecule they would like to view. They will then be transported to that molecule's AR page that utilizes the laptop's camera.
