--- a/generic.html
+++ b/generic.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>hGraph V1.0</h1>
-							<img src="images/hgraph.png" alt="hgraph" class = "center" style="width:650px;height:512px;">
+							<img src="images/hgraph.png" alt="hgraph" class = "center" style=width:"650px" height:"512px">
 							<p>hGraph (Health Graph) is a standardized visual representation of a patient's health status, designed to increase awareness of the individual's factors that can affect one's overall health. hGraph displays a complete overview of an individual's health. This single picture method provides a person with a significant understanding of his or her total well being because it compiles multiple metrics into a unified graph that can be viewed at a glance.
 							</p>
               <p>hGraph users can easily identify which metrics exist in a normal range versus those that may be too high or low. It effectively conveys important data at sizes both large and small, and enables users to recognize condition patterns. With hGraph, patients can track their own health and healthcare providers can learn to recognize representative visualizations for common diseases.</p>
