--- a/hgraph2.html
+++ b/hgraph2.html
@@ -49,7 +49,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>hGraph V2.0</h1>
-								<img src="images/hgraph_end.png" alt="hgraph" class = "center" style="width:600px;height:512px;">
+								<img src="images/hgraph_end.png" alt="hgraph" class = "center" style= width:"600px" height:"512px">
 							<p>Developed with the same premise as hGraph V1.0 but implemented through React. For more information on the hGraph project, please go to <a href="https://github.com/goinvo/hGraph">hGraph V1.0</a>. Since, hGraph V1.0
 							was implemented in Javascript and Node.js, updates to hGraph required the whole application to refresh. Through React, updates to the graph are automatic and do not require refreshing the page.
 						hGraph V2.0 also has more transition animations, is modified for mobile, and can show multiple graphs through overlays. hGraph V2.0 prompts the user for various datapoints and is slowly progressing to a conversational application.
