--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,12 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Resume</h1>
-							<embed src="csun_resume.pdf" width="1000" height="750w" type='application/pdf'>
+							<!--<embed src="csun_resume.pdf" width="1000" height="750w" type='application/pdf'>-->
+							<object data="csun_resume.pdf" type="application/pdf" width="100%" height="650px">
+  						<p>It appears you don't have a PDF plugin for this browser.
+   						You can click <a href="csun_resume.pdf">here</a>to
+  						download the PDF file.</a></p>
+ 						</object>
 						</div>
 					</div>
 
