updated hgraph page

--- a/hgraph2.html
+++ b/hgraph2.html
@@ -49,11 +49,29 @@
 					<div id="main">
 						<div class="inner">
 							<h1>hGraph V2.0</h1>
-								<img src="images/hgraph_end.png" alt="hgraph" class = "center" style= width:"600px" height:"512px">
+								<img src="images/ui-proto.png" alt="hgraph" class = "center" style= width:"600px" height:"512px">
 							<p>Developed with the same premise as hGraph V1.0 but implemented through React. For more information on the hGraph project, please go to <a href="https://github.com/goinvo/hGraph">hGraph V1.0</a>. Since, hGraph V1.0
 							was implemented in Javascript and Node.js, updates to hGraph required the whole application to refresh. Through React, updates to the graph are automatic and do not require refreshing the page.
 						hGraph V2.0 also has more transition animations, is modified for mobile, and can show multiple graphs through overlays. hGraph V2.0 prompts the user for various datapoints and is slowly progressing to a conversational application.
 					</p>
+					<br>
+					<h2>The Interface</h2>
+					<img src="images/hgraph_end.png" alt="hgraph" class = "center" style= width:"600px" height:"512px">
+					<p>Here is a closer look at the hGraph interface tracking user data.</p>
+						<br>
+						<h2>Alexa Skill</h2>
+						<img src="images/hgraphskill.png" alt="hgraph" class = "center" style= width:"600px" height:"512px">
+						<p>An accompanying Alexa skill is also in the works. Future work is to connect the skill to interact with the hGraph web interface and send a resulting email at the conclusion of the encounter.</p>
+						<br>
+						<h2>Conversation Design</h2>
+						<p>Designs of actual conversations is a very important aspect of developing a good interaction experience. Here are some of the conversation dialogues I have produced in the process of working on this project.</p>
+						<br>
+						<object data="conversationUI.pdf" type="application/pdf" width="100%" height="650px">
+						<p>It appears you don't have a PDF plugin for this browser.
+						You can click <a href="csun_resume.pdf">here</a>to
+						download the PDF file.</a></p>
+					</object>
+					<br>
 					<p> For further updates, follow the <a href="https://github.com/goinvo/HealthDataManager">Github Repository</a>.</p>
 						</div>
 					</div>
