commented out speech button

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<header>
+						<!--	<header>
 								<input type="button" value="SPEAK">
 								<script>
 								var btn = document.querySelector('input');
@@ -113,11 +113,11 @@
 							final_span.innerHTML = linebreak(final_transcript);
 							interim_span.innerHTML = linebreak(interim_transcript);
 						};
-						
 
 
 
-							</script>
+
+					</script>-->
 							<br>
 							<br>
 							<br>
@@ -134,10 +134,10 @@
 									<span class="image">
 										<img src="images/hgraph2.png" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>hGraph V1.0</h2>
+									<a href="hgraph2.html">
+										<h2>hgraph V2.0</h2>
 										<div class="content">
-											<p>hGraph is an open source system for visualizing personal health metrics. I developed a voice user interace so that patients and doctors could easily add new data via their voice.</p>
+											<p>The newest version of hGraph. This is also a voice implementation but done with a React interface.</p>
 										</div>
 									</a>
 								</article>
@@ -145,10 +145,10 @@
 									<span class="image">
 										<img src="images/hgraph2.png" alt="" />
 									</span>
-									<a href="hgraph2.html">
-										<h2>hgraph V2.0</h2>
+									<a href="generic.html">
+										<h2>hGraph V1.0</h2>
 										<div class="content">
-											<p>The newest version of hGraph. This is also a voice implementation but done with a React interface.</p>
+											<p>hGraph is an open source system for visualizing personal health metrics. I developed a voice user interace so that patients and doctors could easily add new data via their voice.</p>
 										</div>
 									</a>
 								</article>
